<resources>
    <string name="app_name">Privacy Crash Cam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="recorded">Videos</string>
    <string name="settings">Einstellungen</string>
    <string name="legal">Impressum</string>
    <string name="camera">Kamera</string>
    <string name="logout">Abmelden</string>

    <string name="resTitle">Auflösung</string>
    <string name="resHigh">High</string>
    <string name="resMedium">Medium</string>
    <string name="resLow">Low</string>

    <string name="framesTitle">Frames</string>

    <string name="bufferSizeTitle">Aufnahmelänge</string>

</resources>
