<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_resTitle"
                android:text="@string/resTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <include layout="@layout/setting_resolution" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_framesTitle"
                android:text="@string/framesTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            <include layout="@layout/settings_frames" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_bufferSizeTitle"
                android:text="@string/bufferSizeTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            <include layout="@layout/settings_buffer" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>